--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-OPPAI
+I am writing this website to improve my skills and learn new tricks. If you see any mistakes or have better ideas plese write.
